--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,7 +29,7 @@ http {
 
                 local localPath = localMaps.defaultPath;
 
-                if not ngx.arg_localPath then 
+                if not ngx.arg_localPath and ngx.arg_localPath ~= nil then  
                     localPath =  localMaps[ngx.var.arg_localPath];
                 end     
 
